Bug 505462 - When Show Identical Files is deselected, first operation in full files list is carried out anyways
Summary: When Show Identical Files is deselected, first operation in full files list i...
Status: RESOLVED FIXED
Alias: None
Product: kdiff3
Classification: Applications
Component: application (other bugs)
Version First Reported In: 1.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: michael
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-11 08:39 UTC by nttkde
Modified: 2026-01-06 01:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.12.4
Sentry Crash Report:


Attachments
1_ok (135.77 KB, image/png)
2025-06-11 08:40 UTC, nttkde
Details
2_error (112.83 KB, image/png)
2025-06-11 08:40 UTC, nttkde
Details
3_ok (119.25 KB, image/png)
2025-06-11 08:40 UTC, nttkde
Details
4_error (104.45 KB, image/png)
2025-06-11 08:40 UTC, nttkde
Details
5_error (105.90 KB, image/png)
2025-06-11 08:40 UTC, nttkde
Details
testfilesfolders (1.87 KB, application/zip)
2025-06-11 08:43 UTC, nttkde
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nttkde 2025-06-11 08:39:27 UTC
I noticed this when I wanted to find files that are different in two folders and copy those differing files to a third folder.
I'm not 100% sure of the correct intended workflow, but I set folders A and B to be compared and folder C as the destination for the differing files; then I deselected Show Identical Files to only show the differing files and to apply the copy operation to only those.
However, after deselecting Show Identical Files, the operations were otherwise correct and limited to the differing files, but the operation for the first item in the previous full file list was always done regardless.



How to reproduce (way 1):

Compare 2 folders A and B (like in image 1_ok)
Folder -> Choose A for All Items
Start Folder Merge, Simulate It
-> operations seem normal (although the delete-copy operations seem unnecessary when the files are identical in both folders)

then deselect Show Identical Files
Start Folder Merge, Simulate It
-> first item from the full file list always erroneously appears in the beginning of the operations list (see image 2_error)

If B (the destination) is chosen for all items, then the extra first item doesn't appear.



How to reproduce (way 2):

Compare folders A and B and set destination to folder C (like in image 3_ok)
Folder -> Choose A for All Items
Start Folder Merge, Simulate It
-> operations seem normal

then deselect Show Identical Files
Start Folder Merge, Simulate It
-> first item from the full file list always erroneously appears in the beginning of the operations list (see image 4_error)

Similarly, if you Choose B for All Operations and deselect Show Identical Files, the operations list will have the extra first item (see image 5_error).
Same for Auto-Choose Operation for All Items.
Comment 1 nttkde 2025-06-11 08:40:06 UTC
Created attachment 182172 [details]
1_ok
Comment 2 nttkde 2025-06-11 08:40:19 UTC
Created attachment 182173 [details]
2_error
Comment 3 nttkde 2025-06-11 08:40:35 UTC
Created attachment 182174 [details]
3_ok
Comment 4 nttkde 2025-06-11 08:40:46 UTC
Created attachment 182175 [details]
4_error
Comment 5 nttkde 2025-06-11 08:40:57 UTC
Created attachment 182176 [details]
5_error
Comment 6 nttkde 2025-06-11 08:43:09 UTC
Created attachment 182177 [details]
testfilesfolders
Comment 7 michael 2026-01-06 01:37:07 UTC
Git commit c6e7f18b7b587deb88d870fc07c04c2e2524f5c3 by Michael Reeves.
Committed on 02/01/2026 at 02:03.
Pushed by mreeves into branch 'master'.

When merging start on first visable
FIXED-IN:1.12.4

M  +3    -1    src/directorymergewindow.cpp

https://invent.kde.org/sdk/kdiff3/-/commit/c6e7f18b7b587deb88d870fc07c04c2e2524f5c3