When merging start on first visable

BUG: 505462
FIXED-IN:1.12.4